<resources>
    <string name="app_name">浣客洗衣</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_frame">FrameActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="text_register">注册</string>
    <string name="text_backout">注销</string>
    <string name="title_login">绑定手机登录</string>
    <string name="title_register">注册</string>
    <string name="phone_input">请输入手机号码</string>
    <string name="code_get">获取验证码</string>
    <string name="code_input">请输入验证码</string>
    <string name="login_bind">绑定手机登陆</string>
    <string name="register_login">注册并登陆</string>
    <string name="text_description">点击“绑定手机登陆”，即表示同意</string>
    <string name="text_pattern">《快快洗用户模式》</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_upload_local">1234</string>

    <string name="upload_local">本地上传</string>
    <string name="upload_start">开始上传</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="text_switch">选择</string>
    <string name="text_down">下载</string>
    <string name="text_name">guan</string>
    <string name="upload_album">相册上传</string>
    <string name="upload_photo">拍照上传</string>
</resources>
