<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/image_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_56PX"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/DIMEN_24PX"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/DIMEN_20PX"
            android:src="@mipmap/bg_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_login"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/TEXT_SIZE_22SP" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/DIMEN_20PX"
            android:text="@string/text_register"
            android:textColor="@color/icon_text_grey"
            android:textSize="@dimen/TEXT_SIZE_20SP" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/DIMEN_52PX"
        android:layout_below="@id/image_logo"
        android:layout_marginLeft="@dimen/DIMEN_18PX"
        android:layout_marginRight="@dimen/DIMEN_18PX"
        android:layout_marginTop="@dimen/DIMEN_18PX"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/DIMEN_52PX"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_edittext_shape"
            android:hint="@string/phone_input"
            android:inputType="phone"
            android:textColor="@color/icon_text_grey"
            android:textSize="@dimen/TEXT_SIZE_16SP" />

    </RelativeLayout>


    <EditText
        android:id="@+id/et_code"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/DIMEN_52PX"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/DIMEN_18PX"
        android:layout_marginRight="@dimen/DIMEN_18PX"
        android:layout_marginTop="@dimen/DIMEN_16PX"
        android:background="@drawable/bg_edittext_shape"
        android:hint="@string/code_input"
        android:inputType="number"
        android:textColor="@color/icon_text_grey"
        android:textSize="@dimen/TEXT_SIZE_16SP" />

    <Button
        android:id="@+id/btn_login"
        style="@style/ButtonTheme"
        android:layout_marginTop="@dimen/DIMEN_18PX"
        android:text="@string/login_bind" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/DIMEN_14PX"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_book1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/DIMEN_40PX"
            android:text="@string/text_description"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/TEXT_SIZE_12SP" />

        <TextView
            android:id="@+id/tv_book2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_book1"
            android:text="@string/text_pattern"
            android:textColor="@color/main_blue"
            android:textSize="@dimen/TEXT_SIZE_12SP" />

    </RelativeLayout>

</LinearLayout>