<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    tools:context="com.guan.o2o.activity.MainActivity">

    <RelativeLayout
        android:id="@+id/image_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_56PX"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/DIMEN_24PX"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/DIMEN_20PX"
            android:src="@mipmap/bg_back" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_upload_local"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/TEXT_SIZE_22SP" />

        <TextView
            android:id="@+id/tv_backout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/DIMEN_20PX"
            android:text="@string/text_backout"
            android:textColor="@color/icon_text_grey"
            android:textSize="@dimen/TEXT_SIZE_20SP" />
    </RelativeLayout>

    <ListView
        android:id="@+id/lv_file_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_upload_local"
        android:layout_below="@+id/image_logo"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_upload_local"
        style="@style/ButtonTheme"
        android:text="@string/upload_local" />

</RelativeLayout>
